[package]
name = "signalk-server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
influxdb2 = "0.3.2"
influxdb2-structmap = "0.2"
num-traits = "0.2"
chrono = "0.4.22"
signalk_core= {path = "signalk-core" }
futures = { version = "0.3", default-features = false }