[package]
name = "signalk_core"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
influxdb = { version = "0.5.2", features = ["derive"] }
chrono = "0.4.22"
