[package]
name = "signalk_core"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
chrono = "0.4.22"
chrono-tz = "0.4.1"


emseries = { path = "../../../emseries" } 